--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
-
+body{
+  background-color:green
+}
+h1{
+text-align: center
+}
+h2{
+  text-align: center;
+}
+p{
+ font-size:30px;
+ text-align: center;
+}
